--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
   --color-primary: oklch(58% 0.233 277.117);
   --color-primary-content: oklch(96% 0.018 272.314);
   --color-secondary: oklch(59% 0.249 0.584);
-  --color-secondary-content: oklch(94% 0.028 342.258);
+  --color-secondary-content: oklch(0.9645 0.0706 98.59);
   --color-accent: oklch(77% 0.152 181.912);
   --color-accent-content: oklch(0% 0 0);
   --color-neutral: oklch(14% 0.005 285.823);
@@ -74,6 +74,8 @@
 @theme inline {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-yellow-jona: oklch(0.9645 0.0706 98.59)
 }
 
 body {
